deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-deployment # <----- Rename the deployment
  labels:
    app: lab-app # <----------- Rename the label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-app # <--------- Rename the label
  template:
    metadata:
      labels:
        app: lab-app # <------- Rename the label
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: devenablement-workshop-pull-secret
      containers:
      - name: springboot-container
        # image will be pulled from localdev Docker Registry if present
        image: registry.company.com/jpotte46/springboot-hello-world:0.0.1
        ports:
          - containerPort: 8080
            name: http
        resources:
          requests:
            memory: "300Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api/v1/hello
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 20
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/v1/hello
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 20
          timeoutSeconds: 5
