service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glits-service # <--- Rename the service
  labels:
    app: glits-app # <------ Rename the label
spec:
  type: ClusterIP
  selector:
    app: glits-app # <------ Rename to match your pods' label
  ports:
  - name: http
    protocol: "TCP"
    port: 8080
    targetPort: 8080
